fix: package deps, node >= 14, .nvmrc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
         "jsx": "react",
         "typeRoots": [
             "node_modules/@types",
-            "node_modules/uxp-types",
-            "./@types"
+            "node_modules/uxp-types"
         ],
         "lib": [
             "esnext",
