--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
     "version": "0.1.3",
+    "engines": {
+        "node": ">=14.0.0"
+    },
     "scripts": {
         "install": "node scripts/install.mjs",
         "manifest": "shx rm -f plugin/manifest.json && npm run install",
@@ -41,7 +44,7 @@
         "source-map-loader": "^3.0.0",
         "style-loader": "^1.1.3",
         "typescript": "^4.3.4",
-        "uxp-types": "^0.1.1",
+        "uxp-types": "^0.1.2",
         "webpack": "^4.32.2",
         "webpack-cli": "^3.3.2"
     },
@@ -50,6 +53,6 @@
         "@babel/runtime": "^7.14.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-uxp-spectrum": "^0.1.8"
+        "react-uxp-spectrum": "^0.1.9"
     }
 }
