--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@babel/runtime": "^7.14.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.2.0",
         "react-uxp-spectrum": "^0.1.9"
     }
 }
